Fix background image filename case sensitivity

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html,body{
 .splash-body{
   min-height:100vh;
   background-color: #102133;
-  background-image:url("Carpe-Diem.png");
+  background-image:url("carpe-diem.png");
   background-repeat:no-repeat;
   background-position:center 44%;
   background-size:78%;
